src/snapshots/ec2hx__conf@webpack.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/webpack
snapshot_kind: text
---
editor.insert-final-newline = true
editor.text-width = 80
