src/snapshots/ec2hx__conf@wordpress.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/wordpress
snapshot_kind: text
---
editor.default-line-ending = "lf"
editor.insert-final-newline = true
