src/snapshots/ec2hx__conf@zsh.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/zsh
snapshot_kind: text
---
editor.default-line-ending = "lf"
