src/snapshots/ec2hx__lang.snap
---
source: src/lib.rs
expression: languages_toml
snapshot_kind: text
---
# language-specific settings:

[[language]]
name = "awk"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "bash"
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "c"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "common-lisp"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "cpp"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "d"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "diff"
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "dtd"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-Makefile*"
scope = "text.plain"
file-types = [{ glob = "Makefile*" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-ac"
scope = "text.plain"
file-types = [{ glob = "*.ac" },]
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "ec2hx-unknown-lang-bat"
scope = "text.plain"
file-types = [{ glob = "*.bat" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-dasc"
scope = "text.plain"
file-types = [{ glob = "*.dasc" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-m4"
scope = "text.plain"
file-types = [{ glob = "*.m4" },]
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "ec2hx-unknown-lang-phpt"
scope = "text.plain"
file-types = [{ glob = "*.phpt" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-re"
scope = "text.plain"
file-types = [{ glob = "*.re" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-skl"
scope = "text.plain"
file-types = [{ glob = "*.skl" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-w32"
scope = "text.plain"
file-types = [{ glob = "*.w32" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-xsl"
scope = "text.plain"
file-types = [{ glob = "*.xsl" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-y"
scope = "text.plain"
file-types = [{ glob = "*.y" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "git-commit"
indent = { unit = "    ", tab-width = 4 }
text-width = 80
rulers = [81]

[[language]]
name = "html"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "markdown"
indent = { unit = "  ", tab-width = 2 }
text-width = 80
rulers = [81]

[[language]]
name = "php"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "rst"
text-width = 100
rulers = [101]

[[language]]
name = "xml"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "yaml"
indent = { unit = "  ", tab-width = 2 }

################################################################################

# global settings, applied equally to all remaining languages:

[[language]]
name = "bibtex"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "c-sharp"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "cue"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "devicetree"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "env"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "gdscript"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "git-config"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "git-rebase"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "go"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "godot-resource"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "gomod"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "gowork"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "hare"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ini"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "latex"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "make"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "odin"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "openscad"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "supercollider"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "v"
indent = { unit = "\t", tab-width = 4 }
