src/snapshots/ec2hx__lang@cockroach.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/cockroach
snapshot_kind: text
---
[[language]]
name = "make"
indent = { unit = "\t", tab-width = 2 }
